--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 NEXR_PUBLIC _SANITY_DATASET=production
 NEXT_PUBLIC_SANITY_PROJECT_ID=y7ch6hef
-NEXT_PUBLIC_BASE_URL=http://localhost:3000/
+NEXT_PUBLIC_BASE_URL=https://parth.sanity.studio/
